@@ -1,3 +1,8 @@
+2013-04-14  LT140  <http://sites.google.com/site/ltsevenscore/>
+
+	* MemoryAllocator.cpp (AllocateAligned, AllocateAlignedTail): To improve search performance, 'dead (unused but capacity==0)' MCB is now merged with pervious MCB.
+	* MemoryAllocator.cpp (GetFreeSizeSum, GetMaxFreeAreaSize): Added.
+
 2013-04-13  LT140  <http://sites.google.com/site/ltsevenscore/>
 
 	* Random.h (cntl::WELL): Added some constructors for convenience.
